Network: add historical VSP data

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -55,7 +55,7 @@ Changes in dcrd have been [incorporated](https://github.com/decred/dcrdata/pull/
 
 Work continues to finish removing [sqlite](https://github.com/decred/dcrdata/pull/1480). 
 
-RG continues work on [dcrextdata](https://github.com/raedahgroup/dcrextdata), a package for collecting external (off-chain) data not yet found on dcrdata. Progress has been made on collecting node-level data about the mempool and block propagation times. These are being tracked now from a single node and the full history of tracked data will be made available (with charts) when it has been polished. dcrextdata also pulls in and stores data from PoW pools and VSPs, which will allow a historical record of these attributes to be maintained. Preview of the live data is available at [dcrextdata.raedahgroup.com](http://dcrextdata.raedahgroup.com/).
+RG continues work on [dcrextdata](https://github.com/raedahgroup/dcrextdata), a package for collecting external (off-chain) data not yet found on dcrdata. Progress has been made on collecting node-level data about the mempool and block propagation times. These are being tracked now from a single node and the full history of tracked data will be made available (with charts) when it has been polished. dcrextdata also pulls in and stores data from PoW pools and VSPs, which will allow a historical record of these attributes to be maintained. Demo of the live data is available at [here](http://dcrextdata.raedahgroup.com/).
 
 Other:
 
@@ -116,6 +116,15 @@ Sharp drop in hashrate from 550 to 319 Ph/s was observed on Jul 5 according to d
 Staking: 30-day average ticket price was 125.8 DCR (+5.8) per dcrstats.com. The price varied between 118.8-129.5 DCR. Locked amount was 4.83-5.06 million DCR, which corresponded to 48.25-49.84% of the available supply.
 
 The ticket price got to the highest levels (129.46) since the difficulty algorithm consensus chage in July 2017. An [argument](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$156359151625133psHEo:decred.org) was made that this value should not be considered an "ATH".
+
+Historical charts of [VSP data](https://charts.dcr.farm/d/000000016/proof-of-stake-pools?orgId=1&from=1514764800000&to=now) are available at dcr.farm. Similar data was recently made available via the [dcrextdata](http://dcrextdata.raedahgroup.com/) prototype, but dcr.farm has data since Jan 2018. Setting long time interval reveals interesting trends in VSP competition:
+
+* dcr.stakeminer.com bottomed at 14% in June and since recovered above 15% of live tickets
+* stakey.net grew from 2.8% to 6.9% live tickets in 2019 which correlats with the increase of its user count from 300 to 500
+* megapool grew to 3.5% since inception in Oct 2018
+* tokensmart had a dynamic history: it grew to 2% since inception in Apr 2018, went down to 0.8% in Apr 2019, then a quick rise to nearly 3% in June, followed by another decline to 0.8%
+
+The chart of moving average of missed ticket proportion is interesting too and can be useful for choosing a VSP.
 
 Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1561939200000&to=1564617600000) there were around 173 listening nodes and 360-530 total nodes per dcr.farm. As of Aug 2, roughly 70% run dcrd v1.4.0, 7.5% are dcrwallet v1.4.0, and 6% are v1.5.0(pre) dev builds.
 
