--- a/journal/201907.md
+++ b/journal/201907.md
@@ -130,24 +130,17 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 As of Aug 2, the DCR [testnet LN](https://charts.dcr.farm/d/DHPdAO4Wz/lightning-network?orgId=1) shows 18 nodes, 52 channels and a total capacity of 410 DCR.
 
-## Mining
-
-{new miners, relevant news about existing miners, interesting events or stats}
-
 ## Integrations
 
-["Everstake"](https://decred.everstake.one/) became the latest VSP for decred, they also wrote a blog [post](https://medium.com/everstake/welcome-decred-voting-on-everstake-b2d0371426ad) announcing decred support to their staking services.
+[Everstake](https://everstake.one/), provider of staking services, [announced](https://medium.com/everstake/welcome-decred-voting-on-everstake-b2d0371426ad) the launch of their Decred VSP at [decred.everstake.one](https://decred.everstake.one/)
 
+[Exodus](https://www.exodus.io/) wallet [gained](https://twitter.com/exodus_io/status/1148593861549334528) Trezor support for managing and exchanging of DCR.
 
-The ["MixinNetwork"](https://twitter.com/Mixin_Network/status/1153272304790433793) added support for decred. Per their [website](https://mixin.one/) is a "Mixin is a publicly distributed ledger aimed to help other publicly distributed ledgers gain trillions of TPS, achieve sub second final confirmations, zero transaction fees, enhanced privacy, and unlimited extensibility."
+[Vertbase](https://www.vertbase.com/), a DCR exchange with fiat gateway, [announced](https://twitter.com/vertbase/status/1147840898564120577) that they will be starting a foundation. An interesting event in the space, the foundation will donate to projects' development and have its board constructed of volunteer core team members from the projects that Vertbase lists and supports.
 
-Wallets:
-
-Exodus wallet announced that users can now use their trezor hardware wallets to manage their decred funds in their exodus wallets.
+[MixinNetwork](https://twitter.com/Mixin_Network/status/1153272304790433793) integrated Decred. From their [website](https://mixin.one/), "Mixin is a publicly distributed ledger aimed to help other publicly distributed ledgers gain trillions of TPS, achieve sub second final confirmations, zero transaction fees, enhanced privacy, and unlimited extensibility.".
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
-
-Interesting development in exchange space https://twitter.com/vertbase/status/1147840898564120577 {Is integrations the right place for this ?} {Kinf of feels out of place...perhaps better in governance?}
 
 ## Adoption
 
