--- a/journal/201907.md
+++ b/journal/201907.md
@@ -177,38 +177,32 @@ Upcoming:
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
-
-{ratings news}
-
 Selected articles:
 
-* Bitcoin & Decred / Historical Documents of a Digital Financial Revolution by BlackBearXVII ([Medium](https://medium.com/@imagnusholdings/bitcoin-decred-historical-documents-of-a-digital-financial-revolution-4debfa0d10d9))
 * Decred: What Gold And Bitcoin Wanted To Be by Pascal Thellmann ([seekingalpha.com](https://seekingalpha.com/instablog/49962360-pascal-thellmann/5324856-decred-gold-bitcoin-wanted))
-* Monetary premiums, can altcoins compete with Bitcoin? by @Checkmate ([Medium](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4))
-* Libra: Friend or Foe? by @jy-p [ccn.com](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/)
-* Introduction to Crypto-Accounting: An Analysis of Decred as an Accounting System by Permabull Nino ([Medium ](https://medium.com/@permabullnino/introduction-to-crypto-accounting-an-analysis-of-decred-as-an-accounting-system-4d3e67fce28))
-* Blockhead Capital: Decred Investment Thesis ([blockheadcap.com](https://www.blockheadcap.com/post/decred-investment-thesis))
+* Monetary premiums, can altcoins compete with Bitcoin? by Checkmate ([medium](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4))
+* Libra: Friend or Foe? by @jy-p ([ccn.com](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/))
+* Bitcoin & Decred / Historical Documents of a Digital Financial Revolution by BlackBearXVII ([medium](https://medium.com/@imagnusholdings/bitcoin-decred-historical-documents-of-a-digital-financial-revolution-4debfa0d10d9))
 * Sovereign (Crypto) Networks by Joel Monegro ([placeholder.vc](https://www.placeholder.vc/blog/2019/7/31/lvhpfydo4m3uoezhwhicyxo06og0mn)) - mentions Decred as an example
+* Introduction to Crypto-Accounting: An Analysis of Decred as an Accounting System by Permabull Nino ([medium](https://medium.com/@permabullnino/introduction-to-crypto-accounting-an-analysis-of-decred-as-an-accounting-system-4d3e67fce28))
+* Blockhead Capital: Decred Investment Thesis ([blockheadcap.com](https://www.blockheadcap.com/post/decred-investment-thesis))
 
 Translations:
 
-* {}
-* @wanbihou translated Dex spec? {SB: Dominic translated the DEX spec into chinese: https://github.com/DominicTing/dcrdexStandard-CN-/blob/master/README.mediawiki. managed to post it to our Binance CN info page new feed without pushback: https://info.binance.com/cn/currencies/decred}
+* @Dominic translated the whole [Decred DEX spec](https://github.com/decred/dcrdex/blob/master/README.mediawiki) draft into [Chinese](https://github.com/DominicTing/dcrdexStandard-CN-/blob/master/README.mediawiki). The link was submitted to Chinese Binance [info page](https://info.binance.com/cn/currencies/decred).
+* May and June issues of Decred Journal were translated to Arabic (@arij), Chinese (@Dominic, @guang, @changhugo), Italian and Russian (@DZ), Polish (@kozel) and Vietnamese (Duyen Em). Thank you all.
 
 Videos:
 
-* Libra: Friend or Foe? @jy-p interview on [Block TV](https://twitter.com/BLOCKTVnews/status/1156420032819277824)
+* Libra: Friend or Foe? @jy-p interview on [Block TV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance)
 * Decred Assembly Deep Dive: Decentralizing the Treasury with @moo31337 ([youtube](https://www.youtube.com/watch?v=hpUVIUkgh9k))
-* 
 
 Audio:
 
-* Decred in Depth Ep. 4 Murad Mahmudov - DCR Investment Thesis + SoV Narrative + Crypto Economics ([libsyn](https://decredindepth.libsyn.com/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics-0) [soundcloud](https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics)) ([twitter](https://twitter.com/decredproject/status/1150836740665552896))
-* Decred in Depth Ep. 5 Permabull Nino - Decred As Strong Accounting + Ticket Metrics ([libsyn](https://decredindepth.libsyn.com/ep-5-decred-as-strong-accounting-ticket-metrics-with-permabull-nino-0)) ([twitter](https://twitter.com/decredproject/status/1157000762611896320?))
-* Decred, splitting the difference between Bitcoin and Ethereum, @lukebp on the POV Crypto podcast ([Medium](https://twitter.com/decredproject/status/1157000762611896320))
-* On-chain atomic swaps, an episode of the Sound Money Podcast with @joshuam ([Spotify](https://open.spotify.com/episode/1SuzMUUmtm6xR7ofGN6t4a))
-
+* Decred in Depth Ep. 4 Murad Mahmudov - DCR Investment Thesis + SoV Narrative + Crypto Economics ([libsyn](https://decredindepth.libsyn.com/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics-0), [soundcloud](https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics), [twitter](https://twitter.com/decredproject/status/1150836740665552896))
+* Decred in Depth Ep. 5 Permabull Nino - Decred As Strong Accounting + Ticket Metrics ([libsyn](https://decredindepth.libsyn.com/ep-5-decred-as-strong-accounting-ticket-metrics-with-permabull-nino-0), [twitter](https://twitter.com/decredproject/status/1157000762611896320))
+* POV Crypto: Decred: Splitting the Difference Between Bitcoin and Ethereum with Luke Powell ([medium](https://medium.com/@TrustlessState/decred-splitting-the-difference-between-bitcoin-and-ethereum-with-luke-powell-758cf6e1218d), [libsyn](http://povcryptopod.btc.libsynpro.com/decred-splitting-the-difference-between-bitcoin-and-ethereum))
+* The Sound Money Podcast: On-Chain Atomic Swaps with @joshuam ([spotify](https://open.spotify.com/episode/1SuzMUUmtm6xR7ofGN6t4a), [itunes](https://podcasts.apple.com/us/podcast/the-sound-money-podcast/id1470774235?i=1000443695629))
 
 ## Community Discussions
 
