--- a/journal/201907.md
+++ b/journal/201907.md
@@ -306,6 +306,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-* writing and editing: bee, degeri, lukebp, richardred, s\_ben
-* reviews and feedback: chappjc, raedah
+* writing and editing: bee, degeri, lukebp, raedah, richardred, s\_ben
+* reviews and feedback: chappjc, davecgh, jholdstock, matheusd
 * title image: {}
