--- a/journal/201907.md
+++ b/journal/201907.md
@@ -144,9 +144,11 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 Portuguese unprocessed honeybee products maker DrApis [announced](https://twitter.com/drapiscom/status/1146539277028909058) that they accept DCR.
 
-Blockhead Capital [announced](https://twitter.com/jyashouafar/status/1152238301593657344) their investment in Decred and shared their [research paper](https://www.blockheadcap.com/post/decred-investment-thesis). {add highlights from the paper}
+Blockhead Capital [announced](https://twitter.com/jyashouafar/status/1152238301593657344) their investment in Decred and shared their [research paper](https://www.blockheadcap.com/post/decred-investment-thesis). Their conclusion:
 
-{did Adaptive announce investing in Decred? https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics }
+> Decred is an adaptive cryptocurrency with a rigid monetary policy. The rigid monetary policy provides the base required to achieve monetary premium while the adaptive nature of its on-chain governance allows for integration of more dynamic features. The hybrid consensus mechanism creates adequate checks and balances between the various ecosystem parties while eliminating contentious hardforks as the primary method to resolve disputes - a highly desirable feature for an aspiring global reserve asset. Further, the hybrid consensus creates for more secure blockspace, making the blockspace more valuable, and provides for a more censorship resistant currency. Decred iterates on Bitcoin’s strengths and shores up many of its shortcomings, putting it in a position to complement or compete with it as a digital store of value. 
+
+
 
 ## Outreach
 
