Events crypto monday

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -173,7 +173,7 @@ Attended:
 Upcoming:
 
 * Aug 8 - [Blockchain Bajio](https://www.eventbrite.com/e/blockchain-bajio-2do-meetup-tickets-66510186759) - Leon, Guanajuato, Mexico.
-* Aug 12 - [Crypto Mondays](https://www.meetup.com/Bitcoin-Argentina/events/263594472) - Buenos Aires, Argentina.
+* Aug 12 - [Crypto Monday](https://www.meetup.com/Bitcoin-Argentina/events/263594472) - Buenos Aires, Argentina. Crypto Monday is a monthly event hosted at Espacio Bitcoin, a local coworking space with a strong bond with the main Argentina Bitcoin NGO, Bitcoin Argentina.
 * Aug 13-14 - [Futurist Conference](https://eventmobi.com/futurist/) - Toronto, Canada. Decred announced as a sponsor and has a slot on the [panel](https://twitter.com/decredproject/status/1157416657670868997) "Blockchain Social Impact & Governance for Good", where @zubair will represent the project.
 * Aug 16-18 - [Campus Party Natal](https://brasil.campus-party.org/campus-party-natal/) - Natal, Brazil. @guisso will talk about how Decred works as an organization.
 * Aug 20 - [Crypto Alchemy: Mining and Staking Decred](https://www.meetup.com/Philadelphia-Technology-for-Blockchain-and-Cryptocurrency/events/ffssfryzlbbc/) - Philadelphia, USA. Hosted by [@mikeghen](https://twitter.com/mikeghen/status/1155594343702511616).
