--- a/journal/201907.md
+++ b/journal/201907.md
@@ -259,7 +259,7 @@ Selected Reddit posts:
 
 In July DCR was trading between USD 25.20-35.64 / BTC 0.00262-0.00296. The average daily rate was $28.97.
 
-After brefiely making a run for 13000 USD, Bitcoin prices went down and has been mostly bobbing the 10000 USD mark most of July.
+After brefiely making a run for USD 13,000, Bitcoin price went down and has been mostly bobbing the USD 10,000 mark most of July.
 
 ## Relevant External
 
