--- a/journal/201907.md
+++ b/journal/201907.md
@@ -8,6 +8,10 @@ Major news of July:
 
 * Draft of the DEX spec was released - an important milestone on the route to refresh the crypto exchange experience.
 * {Python library release and proposal}
+* {new dcrdata features}
+* {social media activity}
+* {excellent DiD 4-5}
+* {blockhead thesis?}
 
 ## Development
 
@@ -19,8 +23,6 @@ A [workaround](https://github.com/decred/dcrd/pull/1801) for Go compiler's code 
 
 [dcrwallet](https://github.com/decred/dcrwallet): Codebase upgrades and bug fixes. Large [refactoring](https://github.com/decred/dcrwallet/pull/1509) of JSON-RPC code and [removal](https://github.com/decred/dcrwallet/pull/1496) of obsolete gRPC code have been merged.
 
-{any better comments?}
-
 [Decrediton](https://github.com/decred/decrediton): Bug fixes and small UI improvements. Responsive purchase ticket view [implemented](https://github.com/decred/decrediton/pull/2146). A ton of dependencies were [upgraded](https://github.com/decred/decrediton/pull/2156) to close a host of vulnerabilities.
 
 [Politeia](https://github.com/decred/politeia): Work continues on the [redesign](https://github.com/decred/dcrdesign/issues/77) of Politeia's interface. The other major task in July concerned the [integration](https://github.com/decred/politeia/pull/951) of tlog, from Google's open source [Trillian](https://github.com/google/trillian) data store on the backend as a replacement for git. tlog will improve scalability, allow records to be timestamped individually, and will allow for the a switch to a filesystem like [IPFS](https://ipfs.io) in future.
@@ -29,11 +31,9 @@ Login by email has been [replaced](https://github.com/decred/politeia/pull/940) 
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): bug fixes, UI and performance improvements. Reworked [Connect to Wallet](https://github.com/decred/dcrstakepool/pull/427) view and added the display of VSP's [block height](https://github.com/decred/dcrstakepool/pull/440) to see if it is healthy. More work to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool and dcrwallet (dcrstakepool should only talk to the stakepoold service that in turn manages the voting wallet).
 
-{please provide an overview of dcrstakepool work in July and where it is heading}
+Raedah Group has started work to [improve](https://github.com/raedahgroup/dcrstakepool/pull/4) the VSP authentication APIs. This will enable the use of accountless VSPs, which will greatly simplify the staking setup process for new users ([discussion](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$15605505894685ViDcj:decred.org)). 
 
-RG has started work to [improve](https://github.com/raedahgroup/dcrstakepool/pull/4) the VSP authentication APIs. This will enable the use of accountless VSPs, which will greatly simplify the staking setup process for new users ([discussion](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$15605505894685ViDcj:decred.org)). 
-
-[dcrlnd](https://github.com/decred/dcrlnd): upstream changes from [lnd](https://github.com/lightningnetwork/lnd) have been [ported](https://github.com/decred/dcrlnd/pull/36#issuecomment-509370199), and private dev branches are mostly in sync with the upstream lnd master branch. The latest upstream [pull request](https://github.com/lightningnetwork/lnd/commit/add905d17f7bbb11d0df2761cdf8accf2fef2b00) to be reviewed was submitted to lnd on July 25th.  
+[dcrlnd](https://github.com/decred/dcrlnd): upstream changes from [lnd](https://github.com/lightningnetwork/lnd) have been [ported](https://github.com/decred/dcrlnd/pull/36#issuecomment-509370199), and private dev branches are mostly in sync with the upstream lnd master branch. The latest upstream [pull request](https://github.com/lightningnetwork/lnd/commit/add905d17f7bbb11d0df2761cdf8accf2fef2b00) to be reviewed was submitted to lnd on July 25th.
 
 The [lightning-faucet](https://github.com/decred/lightning-faucet) repo has migrated from @matheusd's GitHub to the official decred org, where the faucet saw minor improvements this month to the form for generating Lightning [invoices](https://github.com/decred/lightning-faucet/pull/9) and the [addition](https://github.com/decred/lightning-faucet/pull/10) of Continuous Integration (CI). Work has started on a new Pay Invoice form that will allow users to pay via the faucet (currently users must pay invoices on the command line with `dcrlncli`). 
 
@@ -53,12 +53,12 @@ Changes in dcrd have been [incorporated](https://github.com/decred/dcrdata/pull/
 
 Work continues to finish removing [sqlite](https://github.com/decred/dcrdata/pull/1480). 
 
-RG continues work on [dcrextdata](https://github.com/raedahgroup/dcrextdata), a package for collecting external (off-chain) data not yet found on dcrdata. Progress has been made on collecting node-level data about the mempool and block propagation times. These are being tracked now from a single node and the full history of tracked data will be made available (with charts) when it has been polished. dcrextdata also pulls in and stores data from PoW pools and VSPs, which will allow a historical record of these attributes to be maintained. Demo of the live data is available at [here](http://dcrextdata.raedahgroup.com/).
+Raedah Group continues work on [dcrextdata](https://github.com/raedahgroup/dcrextdata), a package for collecting external (off-chain) data not yet found on dcrdata. Progress has been made on collecting node-level data about the mempool and block propagation times. These are being tracked now from a single node and the full history of tracked data will be made available (with charts) when it has been polished. dcrextdata also pulls in and stores data from PoW pools and VSPs, which will allow a historical record of these attributes to be maintained. Demo of the live data is available at [here](http://dcrextdata.raedahgroup.com/).
 
 Other:
 
 * Draft of the DEX specification has been released and added to the new [dcrdex](https://github.com/decred/dcrdex) repository.
-* RG is working on a mobile app for local person-to-person BTC/DCR trading (the work is in private repos for now).
+* Raedah Group is working on a mobile app for local person-to-person BTC/DCR trading (the work is in private repos for now).
 * [bug bounty](https://bounty.decred.org/) website [update](https://twitter.com/degeri_crypto/status/1154776087374770176): added details for 3 new vulnerabilities. The program has processed a total of 67 submissions, with 9 being eligible for a payout, of which 8 have been patched and disclosed.
 * {mention webwallet no longer supported, add links}
 
@@ -181,7 +181,7 @@ Attended:
 
 * Jul 4-5 - [Blockchain Summit Latam](https://twitter.com/Decred_ES/status/1146093986806976513) - Mexico City, Mexico. Ana Dalia [represented](https://twitter.com/AnaDaliacd23/status/1146873685229416450) Decred. After the conference there was a Decred-sponsored [dinner](https://twitter.com/Decred_ES/status/1147522846513618945).
 * Jul 10 - [Decred meetup](https://twitter.com/Decred_BR/status/1147201276058505216) - São Paulo, Brazil. Organized by @guisso.
-* Jul 10 - [StakingCon](https://twitter.com/BlockBeatsChina/status/1147570186519638017) - Beijing, China. @Dominic [represented](https://twitter.com/DecredCN/status/1148983482732830720) Decred and participated in a roundtable discussion. Organized by @BlockBeatsChina.
+* Jul 10 - [StakingCon](https://twitter.com/BlockBeatsChina/status/1147570186519638017) - Beijing, China. @Dominic "managed to charm the organizer to slot in a decred video and particpated in the roundtable discussion". Organized by @BlockBeatsChina. ([photos](https://twitter.com/DecredCN/status/1148983482732830720))
 * Jul 11 - [Staked US event](https://twitter.com/staked_us/status/1148687292032323584) - New York, USA. Fireside chat with @joshuam, co-hosted by Staked and TokenTax.
 * Jul 19 {correct?} - Meetup - Buenos Aires, Argentina. [@Camilolwi](https://twitter.com/Camilolwi) [presented](https://twitter.com/cryptorocketok/status/1152260099072778240) Decred. Hosted by [Crypto Rocket Group](https://twitter.com/cryptorocketok). 
 * Jul 21 - [OKEx meetup](https://twitter.com/wanbihou/status/1151704823533723648) - Qingdao, China. Chat with @Dominic. {any notes?}
@@ -221,7 +221,7 @@ Translations:
 Videos:
 
 * Libra: Friend or Foe? @jy-p interview on [Block TV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance)
-* Decred Assembly Deep Dive: Decentralizing the Treasury with @moo31337 ([youtube](https://www.youtube.com/watch?v=hpUVIUkgh9k))
+* Decred Assembly Deep Dive: Decentralizing the Treasury with @moo31337 ([youtube](https://www.youtube.com/watch?v=hpUVIUkgh9k)) {video removed by the user?}
 
 Audio:
 
@@ -315,8 +315,6 @@ Dash [completed](https://blog.dash.org/the-dash-investment-foundation-supervisor
 Another round of the Tezos protocol amendment process is underway, after the Brest proposal by TzScan Baker failed to achieve enough upvotes to progress. Cryptium Labs [injected](https://blog.nomadic-labs.com/babylon-proposal-injected.html) a proposal called Babylon, prepared jointly with Nomadic Labs, on Jul 26, then an amended version 2.0 on Aug 2. This amendment would make a number of changes to the protocol, including a new variant of the consensus algorithm and new Michelson features, and a new 5% proposal quorum is introduced which will prevent the proposal with the most upvotes progressing to the second phase unless it has support from at least 5% of the stake. This will allow for proposals with little support (like Brest) to be rejected earlier, and the proposal cycle to restart more quickly thereafter.
 
 The 0x decentralized exchange protocol team [announced](https://blog.0xproject.com/shut-down-of-0x-exchange-v2-0-contract-and-migration-to-patched-version-6185097a1f39) that a security vulnerability had been reported by a 3rd party security researcher, and shut down the exchange contract as a precaution. The 0x smart contract pipeline was patched and re-deployed the next day.
-
-{SB: maybe cover Maker's governance portal revamp? Looks like they're doing off-chain voting for governance polls, sounds familiar... https://blog.makerdao.com/an-update-to-maker-governance-polling/ }
 
 The network of OpenPGP keyservers was subject to certificate flooding [attack](https://gist.github.com/rjhansen/67ab921ffb4084c865b3618d6955275f). Someone uploaded a ton of certifications for public keys of two GnuPG contributors, effectively "poisoning" them. Anyone who attempts to import a poisoned key into a vulnerable installation risks making their keyring unusable because of a massive performance degradation. Flaws of the keyserver network design were known for a long time. It basically maintains a decentralized censorship-resistant write-only database but with no robust abuse protection. During more than a decade of this vulnerability being known, the network was unable to coordinate the development and deployment of an upgrade. This once again reminds how challenging it is to design a resilient decentralized protocol and how critical it is for a decentralized network to have a governance mechanism to adapt.
 
