Add Ditto update via Leslie

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -148,11 +148,32 @@ Blockhead Capital [announced](https://twitter.com/jyashouafar/status/11522383015
 
 > Decred is an adaptive cryptocurrency with a rigid monetary policy. The rigid monetary policy provides the base required to achieve monetary premium while the adaptive nature of its on-chain governance allows for integration of more dynamic features. The hybrid consensus mechanism creates adequate checks and balances between the various ecosystem parties while eliminating contentious hardforks as the primary method to resolve disputes - a highly desirable feature for an aspiring global reserve asset. Further, the hybrid consensus creates for more secure blockspace, making the blockspace more valuable, and provides for a more censorship resistant currency. Decred iterates on Bitcoin’s strengths and shores up many of its shortcomings, putting it in a position to complement or compete with it as a digital store of value. 
 
-
-
 ## Outreach
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
+Ditto’s July achievements:
+
+- Worked with various community members on strategies and tactics for engaging in a productive/educational way on Twitter. 
+- Built out a wider list of Decred spokespeople, along with a new wish list of media targets. 
+- Strategized with the community on how to best build visibility for the Decred tagline.
+- Secured an interview for Jake with a mainstream tech outlet to discuss the Libra hearings and its implications for the crypto space. 
+- Facilitated the Base Layer podcast with @akinsawyerr, who spoke about what makes Decred a superior SoV, how its inclusive and decentralized governance works, and what to expect in 2020. We’ll share once it goes live. 
+- Staffed an interview between @elian and Criptonoticias to talk Decred in Latin America. 
+- Staffed an interview between Jake and Alessandra Sollberger, who is writing a book called *Blockchain Mavericks.* 
+- Secured an article in financial advisory newsletter, Legacy Research, as a result of an interview we hosted with @moo31337.
+
+- Got @jy-p’s staking byline published in [CoinDesk](https://www.coindesk.com/staking-isnt-just-a-way-to-earn-crypto-money-and-it-shouldnt-be) 
+
+- - Rallied the community to engage with the tweet. 
+
+- Secured a 10-minute segment on [BlockTV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance) with @jy-p discussing his take on Libra and how Decred’s progress towards becoming a DAO. 
+- Secured publication of @jy-p’s byline on Libra in [CCN ](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/?p=192061)
+- Worked with the community to amplify/engage with the [#DEX tweet storm](https://twitter.com/decredproject/status/1156652694502817793) announcing Decred’s DEX specs.
+- Worked with community members who are active on social media to identify Crypto Twitter influencers the community can engage with on governance, staking, and other key issues. 
+- Escalated our work with various community members on engaging in a productive/educational way on Twitter. 
+- Began a messaging refresh, adding FAQs to counter common misunderstandings. 
+- Put the finishing touches on the schema for an educational resources repository for the Decred website that makes it easier for journalists and newbies to find out about us in one place. 
+- Put together a long-term media relations plan that targets all of Decred’s audiences (investors, developers, crypto enthusiasts), as well as media who haven’t covered Decred in the past. 
+- Did media training refresher with @jy-p to prepare for broadcast interviews. 
 
 ## Events
 
