--- a/journal/201907.md
+++ b/journal/201907.md
@@ -150,30 +150,24 @@ Blockhead Capital [announced](https://twitter.com/jyashouafar/status/11522383015
 
 ## Outreach
 
-Ditto’s July achievements:
+Ditto's July achievements:
 
-- Worked with various community members on strategies and tactics for engaging in a productive/educational way on Twitter. 
-- Built out a wider list of Decred spokespeople, along with a new wish list of media targets. 
-- Strategized with the community on how to best build visibility for the Decred tagline.
-- Secured an interview for Jake with a mainstream tech outlet to discuss the Libra hearings and its implications for the crypto space. 
-- Facilitated the Base Layer podcast with @akinsawyerr, who spoke about what makes Decred a superior SoV, how its inclusive and decentralized governance works, and what to expect in 2020. We’ll share once it goes live. 
-- Staffed an interview between @elian and Criptonoticias to talk Decred in Latin America. 
-- Staffed an interview between Jake and Alessandra Sollberger, who is writing a book called *Blockchain Mavericks.* 
-- Secured an article in financial advisory newsletter, Legacy Research, as a result of an interview we hosted with @moo31337.
-
-- Got @jy-p’s staking byline published in [CoinDesk](https://www.coindesk.com/staking-isnt-just-a-way-to-earn-crypto-money-and-it-shouldnt-be) 
-
-- - Rallied the community to engage with the tweet. 
-
-- Secured a 10-minute segment on [BlockTV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance) with @jy-p discussing his take on Libra and how Decred’s progress towards becoming a DAO. 
-- Secured publication of @jy-p’s byline on Libra in [CCN ](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/?p=192061)
-- Worked with the community to amplify/engage with the [#DEX tweet storm](https://twitter.com/decredproject/status/1156652694502817793) announcing Decred’s DEX specs.
-- Worked with community members who are active on social media to identify Crypto Twitter influencers the community can engage with on governance, staking, and other key issues. 
-- Escalated our work with various community members on engaging in a productive/educational way on Twitter. 
-- Began a messaging refresh, adding FAQs to counter common misunderstandings. 
-- Put the finishing touches on the schema for an educational resources repository for the Decred website that makes it easier for journalists and newbies to find out about us in one place. 
-- Put together a long-term media relations plan that targets all of Decred’s audiences (investors, developers, crypto enthusiasts), as well as media who haven’t covered Decred in the past. 
-- Did media training refresher with @jy-p to prepare for broadcast interviews. 
+* Escalated our work with various community members on strategies and tactics for engaging in a productive/educational way on Twitter. 
+* Built out a wider list of Decred spokespeople, along with a new wish list of media targets. 
+* Strategized with the community on how to best build visibility for the Decred tagline.
+* Secured an interview for @jy-p with a mainstream tech outlet to discuss the Libra hearings and its implications for the crypto space. 
+* Facilitated the Base Layer podcast with @akinsawyerr, who spoke about what makes Decred a superior SoV, how its inclusive and decentralized governance works, and what to expect in 2020. We'll share once it goes live. 
+* Staffed an interview between @elian and Criptonoticias to talk Decred in Latin America. 
+* Staffed an interview between @jy-p and Alessandra Sollberger, who is writing a book called Blockchain Mavericks.
+* Secured an article in financial advisory newsletter, Legacy Research, as a result of an interview we hosted with @moo31337.
+* Secured a 10-minute segment on [BlockTV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance) with @jy-p discussing his take on Libra and how Decred's progress towards becoming a DAO. 
+* Secured publication of @jy-p's byline on Libra in [CCN](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/)
+* Worked with the community to amplify/engage with the [#DEX tweet storm](https://twitter.com/decredproject/status/1156652694502817793) announcing Decred's DEX spec.
+* Worked with community members who are active on social media to identify Crypto Twitter influencers the community can engage with on governance, staking, and other key issues. 
+* Began a messaging refresh, adding FAQs to counter common misunderstandings. 
+* Put the finishing touches on the schema for an educational resources repository for the Decred website that makes it easier for journalists and newbies to find out about us in one place. 
+* Put together a long-term media relations plan that targets all of Decred's audiences (investors, developers, crypto enthusiasts), as well as media who haven't covered Decred in the past. 
+* Did media training refresher with @jy-p to prepare for broadcast interviews. 
 
 ## Events
 
@@ -185,7 +179,6 @@ Attended:
 * Jul 11 - [Staked US event](https://twitter.com/staked_us/status/1148687292032323584) - New York, USA. Fireside chat with @joshuam, co-hosted by Staked and TokenTax.
 * Jul 19 {correct?} - Meetup - Buenos Aires, Argentina. [@Camilolwi](https://twitter.com/Camilolwi) [presented](https://twitter.com/cryptorocketok/status/1152260099072778240) Decred. Hosted by [Crypto Rocket Group](https://twitter.com/cryptorocketok). 
 * Jul 21 - [OKEx meetup](https://twitter.com/wanbihou/status/1151704823533723648) - Qingdao, China. Chat with @Dominic. {any notes?}
-* Jul 24 - meetup - Chicago, USA. {did it happen? https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156261749215178WZXqK:decred.org }
 * Jul 25 - [Computational Law + Blockchain Festival CDMX 2019](https://twitter.com/LegalHackersMX/status/1153832499333795840) - Mexico City, Mexico. @elian [represented](https://twitter.com/elianhuesca/status/1154452590983299073) the project.
 * Jul 25-26 - Cointime Summit 2019 - Ho Chi Minh City, Vietnam. Duyen Em introduced Decred to individuals in the conference area. Some guest speakers from other projects were already familiar and spoke highly of Decred, but most Vietnamese speakers are just learning about it. A detailed [report](https://github.com/decredcommunity/events/pull/7) by Duyen Em suggest that Decred deserves a much bigger presence in the thriving cryptocurrency space of Vietnam and shares ideas for establishing connections and growing the community. {update report link after merge}
 * Jul 28 - Vietnam Staking Economy - Ho Chi Minh City, Vietnam. Duyen Em represented Decred and answered questions to many young people interested in cryptocurrencies. The details are in the [report](https://github.com/decredcommunity/events/pull/7) for Cointime Summit. {update link after merge}
