--- a/journal/201907.md
+++ b/journal/201907.md
@@ -149,6 +149,15 @@ Blockhead Capital [announced](https://twitter.com/jyashouafar/status/11522383015
 > Decred is an adaptive cryptocurrency with a rigid monetary policy. The rigid monetary policy provides the base required to achieve monetary premium while the adaptive nature of its on-chain governance allows for integration of more dynamic features. The hybrid consensus mechanism creates adequate checks and balances between the various ecosystem parties while eliminating contentious hardforks as the primary method to resolve disputes - a highly desirable feature for an aspiring global reserve asset. Further, the hybrid consensus creates for more secure blockspace, making the blockspace more valuable, and provides for a more censorship resistant currency. Decred iterates on Bitcoin’s strengths and shores up many of its shortcomings, putting it in a position to complement or compete with it as a digital store of value. 
 
 ## Outreach
+July was a month in which infrastructure continued to build that will help Decred mechanize outreach and education. The website is close to complete, and should be live by the end of August with new subpages on Decred's Security, Adapatability, Self-Funding, and History. Additionally, we've agreed upon a schema and are currently assembling a resource repository building on Max Bronstein's Canon (https://github.com/maxbron08/Decred-Canon) that will help form a natural funnel of learning for people taking the #DecredChallenge. 
+
+In order to achieve this, we're slightly refining the messaging, focusing largely on the fundamental principles of Decred, as all messaging flows from there. That will appear in chat within the next week for community input. Other resources for the community that have been released include the Twitter Account List, as well as a Social Media Playbook, featuring best practices for how to engage with others in a constructive way that reflects well on Decred and helps educate others about the project. 
+
+Additionally, a Community Organizer Handbook will be shared for community input shortly. This well help clarify roles and responsibilities in order to gain alignment, improve efficiency, and socialize best practices across the world. Along these lines, Decred is looking for geographic marketing leads to help run areas of the world. Various proposals from different regions are in the works, and should hit Politeia in the next couple of months. We are still looking for leaders in Europe and Asia, so join us in #Marketing or #DCR Local Ops in Matrix to discuss helping to decentralize the organization.
+
+We're also working to coordinate a week-long events blitz in October featuring various Decred community members in some of the most important cities across Asia. Details should be released within the next month.
+
+Decred released Decred in Depth episodes featuring [Murad Mahmudov](https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics) and [Permabull Nino,](https://soundcloud.com/decredindepth/ep-5-decred-as-strong-accounting-ticket-metrics-with-permabull-nino) which were very well received and created a lot of chatter about Decred on social media. You know you're doing something right when you trigger the maxis.
 
 Ditto's July achievements:
 
@@ -193,6 +202,7 @@ Upcoming:
 * Aug 20 - [Crypto Alchemy: Mining and Staking Decred](https://www.meetup.com/Philadelphia-Technology-for-Blockchain-and-Cryptocurrency/events/ffssfryzlbbc/) - Philadelphia, USA. Hosted by [@mikeghen](https://twitter.com/mikeghen/status/1155594343702511616).
 * Aug 28 - [Blockchain Bootcamp](https://www.blockchainbootcamp.net/) - Docklands, Australia. @zohand and co have been [invited](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15644812201506dzVgU:decred.org) to run a blockchain governance event as part of one of the main streams. The event is part of the annual [Digital Innovation Festival](https://dif.vic.gov.au/) hosted by Victorian State Government.
 * Sep 30 - Oct 1 - [Voice of Blockchain](https://twitter.com/BlockchainVoice/status/1154772731575099392) - Chicago, USA. @jy-p will present a keynote "Why Direct Sovereignty & Multi-Stakeholder Inclusive Governance Will Last".
+* Nov 4-7 - [Websummit](https://websummit.com/) - Lisbon, Portugal. @moo31337 will speak on a panel TBD, and Decred will have a 2x2m exhibit booth.
 
 ## Media
 
